Added Decompression Fallback

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/WEBGL.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WEBGL.data.gz",
-        frameworkUrl: buildUrl + "/WEBGL.framework.js.gz",
-        codeUrl: buildUrl + "/WEBGL.wasm.gz",
+        dataUrl: buildUrl + "/WEBGL.data.unityweb",
+        frameworkUrl: buildUrl + "/WEBGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/WEBGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SpaceRenderTest",
